Add footer to UI

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="script.js" defer></script>
   <title>Calculator</title>
 </head>
@@ -34,6 +35,10 @@
       <div id="decimal" class="box color-shade">.</div>
       <div id="enter" class="box color-shade">=</div>
     </div>
-  </div>
+    <div class="footer">
+      <p>Made by |</p>
+      <p id="name">Joseph Dorman</p>
+      <a href="https://github.com/JDorman555"><i class="fa fa-github" style="font-size: 18px"></i></a>
+    </div>
 </body>
 </html>
