--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <div id="divide" class="box color-shade">/</div>
       <div id="number7" class="box">7</div>
       <div id="number8" class="box">8</div>
-      <div id="numer9" class="box">9</div>
+      <div id="number9" class="box">9</div>
       <div id="multiply" class="box color-shade">X</div>
       <div id="number4" class="box">4</div>
       <div id="number5" class="box">5</div>
       <div id="number6" class="box">6</div>
       <div id="subtract" class="box color-shade">-</div>
       <div id="number1" class="box">1</div>
-      <div id="numer2" class="box">2</div>
-      <div id="numer3" class="box">3</div>
+      <div id="number2" class="box">2</div>
+      <div id="number3" class="box">3</div>
       <div id="add" class="box color-shade">+</div>
       <div id="negative" class="box color-shade">NEG</div>
       <div id="number0" class="box">0</div>
