Change divs into buttons, addEventListener for button id

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
       <div class="display">450</div>
     </div>
     <div class="container border">
-      <div id="clear" class="box color-red">C</div>
-      <div id="backspace" class="box color-red">X</div>
-      <div id="percent" class="box color-shade">%</div>
-      <div id="divide" class="box color-shade">/</div>
-      <div id="number7" class="box">7</div>
-      <div id="number8" class="box">8</div>
-      <div id="number9" class="box">9</div>
-      <div id="multiply" class="box color-shade">X</div>
-      <div id="number4" class="box">4</div>
-      <div id="number5" class="box">5</div>
-      <div id="number6" class="box">6</div>
-      <div id="subtract" class="box color-shade">-</div>
-      <div id="number1" class="box">1</div>
-      <div id="number2" class="box">2</div>
-      <div id="number3" class="box">3</div>
-      <div id="add" class="box color-shade">+</div>
-      <div id="negative" class="box color-shade">NEG</div>
-      <div id="number0" class="box">0</div>
-      <div id="decimal" class="box color-shade">.</div>
-      <div id="enter" class="box color-shade">=</div>
+      <button id="clear" class="box color-red">C</button>
+      <button id="backspace" class="box color-red">X</button>
+      <button id="percent" class="box color-shade">%</button>
+      <button id="buttonide" class="box color-shade">/</button>
+      <button id="number7" class="box">7</button>
+      <button id="number8" class="box">8</button>
+      <button id="number9" class="box">9</button>
+      <button id="multiply" class="box color-shade">X</button>
+      <button id="number4" class="box">4</button>
+      <button id="number5" class="box">5</button>
+      <button id="number6" class="box">6</button>
+      <button id="subtract" class="box color-shade">-</button>
+      <button id="number1" class="box">1</button>
+      <button id="number2" class="box">2</button>
+      <button id="number3" class="box">3</button>
+      <button id="add" class="box color-shade">+</button>
+      <button id="negative" class="box color-shade">NEG</button>
+      <button id="number0" class="box">0</button>
+      <button id="decimal" class="box color-shade">.</button>
+      <button id="enter" class="box color-shade">=</button>
     </div>
     <div class="footer">
       <p>Made by |</p>
