--- a/index.html
+++ b/index.html
@@ -10,30 +10,30 @@
 <body>
   <div class="calculator border">
     <div class="screen border">
-      <div class="history">100 + 350 =</div>
-      <div class="display">450</div>
+      <div class="history"></div>
+      <div class="display"></div>
     </div>
     <div class="container border">
       <button id="clear" class="box color-red">C</button>
       <button id="backspace" class="box color-red">X</button>
       <button id="percent" class="box color-shade">%</button>
-      <button id="buttonid" class="box color-shade">/</button>
+      <button id="/" class="box color-shade">/</button>
       <button id="7" class="box">7</button>
       <button id="8" class="box">8</button>
       <button id="9" class="box">9</button>
-      <button id="multiply" class="box color-shade">X</button>
+      <button id="*" class="box color-shade">X</button>
       <button id="4" class="box">4</button>
       <button id="5" class="box">5</button>
       <button id="6" class="box">6</button>
-      <button id="subtract" class="box color-shade">-</button>
+      <button id="-" class="box color-shade">-</button>
       <button id="1" class="box">1</button>
       <button id="2" class="box">2</button>
       <button id="3" class="box">3</button>
-      <button id="add" class="box color-shade">+</button>
+      <button id="+" class="box color-shade">+</button>
       <button id="negative" class="box color-shade">NEG</button>
       <button id="0" class="box">0</button>
       <button id="decimal" class="box color-shade">.</button>
-      <button id="enter" class="box color-shade">=</button>
+      <button id="=" class="box color-shade">=</button>
     </div>
     <div class="footer">
       <p>Made by |</p>
