Fix history display on calculator UI

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
   <div class="calculator border">
     <div class="screen border">
-      <div class="history"></div>
+      <div class ="history-wrapper">
+        <div class="history"></div>
+        <div class="history-equals"></div>
+      </div>
       <div class="display"></div>
     </div>
     <div class="container border">
